Add tests for notificationStoreDao